@@ -67,6 +67,7 @@ class KChartParams : public KDChartParams
 
     KChartPart * part() const { return m_part; }
 
+    // ----------------------------------------------------------------
     // Reimplementation of selected KDChartParams methods
     ChartType  chartType() const            { return m_chartType; }
     void       setChartType( ChartType _type ) {
